javakiva/src/test/java/com/prashsoft/javakiva/issues.txt
/home/chrislowe/repos/javakiva/javakiva/src/main/java/com/prashsoft/javakiva/datafetchers/StatsFetcher.java:34: error: cannot find symbol
        String value = response.readEntity(String.class);
                               ^
  symbol:   method readEntity(Class<String>)
  location: variable response of type Response
/home/chrislowe/repos/javakiva/javakiva/src/main/java/com/prashsoft/javakiva/datafetchers/StatsFetcher.java:48: error: cannot find symbol
        String value = response.readEntity(String.class);
                               ^
  symbol:   method readEntity(Class<String>)
  location: variable response of type Response
/home/chrislowe/repos/javakiva/javakiva/src/main/java/com/prashsoft/javakiva/datafetchers/StatsFetcher.java:58: error: cannot find symbol
        String value = response.readEntity(String.class);
                               ^
  symbol:   method readEntity(Class<String>)
  location: variable response of type Response
/home/chrislowe/repos/javakiva/javakiva/src/main/java/com/prashsoft/javakiva/datafetchers/StatsFetcher.java:68: error: cannot find symbol
        String value = response.readEntity(String.class);
                               ^
  symbol:   method readEntity(Class<String>)
  location: variable response of type Response
/home/chrislowe/repos/javakiva/javakiva/src/main/java/com/prashsoft/javakiva/datafetchers/StatsFetcher.java:78: error: cannot find symbol
        String value = response.readEntity(String.class);
                               ^
  symbol:   method readEntity(Class<String>)
  location: variable response of type Response
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
5 errors
